tests/baselines/reference/MemberFunctionDeclaration4_es6.errors.txt
MemberFunctionDeclaration4_es6.ts(2,5): error TS1003: Identifier expected.


==== MemberFunctionDeclaration4_es6.ts (1 errors) ====
    class C {
       *() { }
        ~
!!! error TS1003: Identifier expected.
    }